--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <base href="/seg3125-p2/" />
+    <base href="/seg3125-p2-f/" />
     <title>FitLife</title>
   </head>
   <body>
